--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ main{
 h1{
     font-size: 40px;
     font-family: 'Oswald', sans-serif;
-    color: #1b0914;
+    color: #ffffff;
     font-weight: bold;
     line-height: 1.4375;
     text-align: center;
@@ -22,7 +22,7 @@ p{
     font-family: 'Laila', serif;
     line-height: 1.5;
     font-style: normal;
-    color: #6c223a;
+    color: #fff4e9;
     letter-spacing: 0;
     font-weight: normal;
 }
@@ -57,5 +57,6 @@ p{
 .hero{
     padding-top: 80px;
     padding-bottom: 90px;
+    background: linear-gradient( rgba(0,0,0,0.5),rgba(61, 45, 45, 0.5) ), url(../img/hero/hero-bg.jpg);
 }
 
