--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,6 @@ p{
 
 
 /*Hero block*/
-
 .hero h1{
     text-transform: uppercase;
 }
@@ -45,18 +44,52 @@ p{
     font-size: 32px;
 }
 
-.hero > .hero-content{
+.hero > .hero-block > .hero-content > .hero-text{
+    margin-top: 30px;
     text-align: center;
 }
 
-.hero > .hero-content{
+.hero > .hero-block > .hero-content{
     padding-left: 24px;
     padding-right: 24px;
 }
 
-.hero{
+.hero > .hero-block {
     padding-top: 80px;
     padding-bottom: 90px;
-    background: linear-gradient( rgba(0,0,0,0.5),rgba(61, 45, 45, 0.5) ), url(../img/hero/hero-bg.jpg);
 }
+
+.hero{
+    width: auto;
+    background: linear-gradient( rgba(0,0,0,0.5),rgba(61, 45, 45, 0.5) ), no-repeat, center/auto 100%, url(../img/hero/hero-bg.jpg);
+}
+
+@media (min-width: 1280px) {
+    .hero h1 {
+        font-size: 70px;
+    }
+
+    .hero p {
+        font-size: 56px;
+    }
+
+    .hero {
+        background: no-repeat, center/100% auto, linear-gradient( rgba(0,0,0,0.5),rgba(61, 45, 45, 0.5) ), url(../img/hero/hero-bg.jpg);
+    }
+
+    .hero > .hero-content{
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .hero{
+        padding-top: 150px;
+        padding-bottom: 150px;
+        padding-left: auto;
+        padding-right: auto;
+    }
+}
+/**/
 
