--- a/css/index.css
+++ b/css/index.css
@@ -2,14 +2,21 @@
     scroll-behavior: smooth;
 }
 
-main{
-    max-width: 980px;
-    margin-left: auto;
-    margin-right: auto;
+body {
+    margin: auto;
 }
 
 h1{
     font-size: 40px;
+    font-family: 'Oswald', sans-serif;
+    color: #ffffff;
+    font-weight: bold;
+    line-height: 1.4375;
+    text-align: center;
+}
+
+h2{
+    font-size: 50px;
     font-family: 'Oswald', sans-serif;
     color: #ffffff;
     font-weight: bold;
@@ -55,6 +62,8 @@ p{
 }
 
 .hero > .hero-block {
+    align-items: center;
+    text-align: center;
     padding-top: 80px;
     padding-bottom: 90px;
 }
@@ -73,23 +82,64 @@ p{
         font-size: 56px;
     }
 
-    .hero {
-        background: no-repeat, center/100% auto, linear-gradient( rgba(0,0,0,0.5),rgba(61, 45, 45, 0.5) ), url(../img/hero/hero-bg.jpg);
-    }
-
-    .hero > .hero-content{
+    .hero > .hero-block > .hero-content{
         padding-left: 15px;
         padding-right: 15px;
+    }
+
+    .hero > .hero-block{
+        padding-top: 120px;
+        padding-bottom: 140px;
         margin-left: auto;
         margin-right: auto;
+        max-width: 1280px;
     }
-    
-    .hero{
-        padding-top: 150px;
-        padding-bottom: 150px;
-        padding-left: auto;
-        padding-right: auto;
+
+    .hero {
+        background: no-repeat, center/100% auto, linear-gradient( rgba(0,0,0,0.5),rgba(61, 45, 45, 0.5) ), url(../img/hero/hero-bg.jpg);
     }
 }
 /**/
 
+/*Info block*/
+
+.info > .info-block > .info-container > .info-text p{
+    margin-top: 30px;
+}
+
+.info > .info-block > .info-container{
+    padding-left: 24px;
+    padding-right: 24px;
+}
+
+.info > .info-block{
+    align-items: center;
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 90px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.info{
+    background: no-repeat, center/100% auto, linear-gradient( rgba(0,0,0,0.5),rgba(61, 45, 45, 0.5) ), url(../img/info/info-bg.jpg);
+}
+
+@media (min-width: 1280px) {
+    .info > .info-block > .info-container > .info-text p{
+        font-size: 32px;
+    }
+
+    .info > .info-block{
+        padding-top: 100px;
+        padding-bottom: 130px;
+        max-width: 800px;
+    }
+
+    .info{
+        
+        background: no-repeat, center/100% auto, linear-gradient( rgba(0,0,0,0.5),rgba(61, 45, 45, 0.5) ), url(../img/info/info-bg.jpg);
+    }
+}
+
+/**/
